ateramos css e ajustamos o erro box-sinze

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="content_container">
             <div class="caixa-principal">
                 <section class="content_value">
-                    <label> Coverter <b>de</b>
+                    <label class="name_convert"> Coverter <strong>de</strong>
                         <select class="box_select_one">
                             <option> R$ Real Brasileiro </option>
                         </select>
 
                     </label>
 
-                    <label> Converter <b>para</b>
+                    <label class="name_covert"> Converter <b>para</b>
                         <select class="box_select_two">
                             <option> € EURO </option>
                             <option>US$ DOLAR AMERICANO </option>
