fiz alguns ajustes

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         <div class="content_container">
             <div class="caixa-principal">
                 <section class="content_value">
-                    <label class="name_convert"> Coverter <strong>de</strong>
+                    <label class="name_convert"> 
+                        converter <b> de </b>
                         <select class="box_select_one">
                             <option> R$ Real Brasileiro </option>
                         </select>
 
                     </label>
 
-                    <label class="name_covert"> Converter <b>para</b>
+                    <label class="name_convert"> 
+                        Converter <b>para</b>
                         <select class="box_select_two">
                             <option> € EURO </option>
                             <option>US$ DOLAR AMERICANO </option>
@@ -31,7 +33,7 @@
                     </label>
 
                     <label>valor
-                        <input class="entrada" type="text" placeholder="digite um valor" alt="valor para digitar">
+                        <input class="entrada" placeholder="digite um valor">
                     </label>
 
                     <button class="button_convert_money"> CONVERTER </button>
