--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main class="content-prinpal">
         <div class="content_grip">
             <div class="caixa-principal">
+                <!-- <img class="logo_marca" src="/assets/logo.gif" alt=""> -->
                 <section class="content_value">
                     <div class="name_convert">
                         converter <b> de </b>
@@ -35,7 +36,7 @@
                     </label>
 
                     <label>valor
-                        <input class="entrada" type="number" pattern="[0-9]*\.?[0-9]*" placeholder="digite um valor" >
+                        <input class="entrada" type="text" pattern="[0-9]*\.?[0-9]*" placeholder="digite um valor" >
                     </label>
 
                     <button class="button_convert_money"> CONVERTER </button>
@@ -73,6 +74,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="/js/functionality.js"></script>
     <script src="js/caselamento-de-caracteres.js"></script>
 </body>
 
