alterando algumas coias no projeto

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="content_convert_moneys_screen">
                         <img src="/assets/brasil 2.png" alt="">
                         <p> REAL </p>
-                        <P> R$ 0.00 </P>
+                        <P class="valuerealbr"> R$ 0.00 </P>
 
 
                     </div>
@@ -59,7 +59,7 @@
                     <div class="content_convert_moneys_screen">
                         <img src="/assets/estados-unidos (1) 1.png" alt="">
                         <p> DÓLAR AMERICANO </p>
-                        <p> US$ 0.00 </p>
+                        <p class="valueamerican"> US$ 0.00 </p>
 
                     </div>
 
