--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <div class="name_convert">
                         Converter <b>para</b>
                         <select class="box_select_two">
-                            <option> € EURO </option>
-                            <option>US$ DOLAR AMERICANO </option>
+                            <option value="euro"> € EURO </option>
+                            <option value="dolar">US$ DOLAR AMERICANO </option>
 
                     </div>
 
