--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
                             <option value="euro"> € EURO </option>
                             <option value="dolar">US$ DOLAR AMERICANO </option>
 
+                        </select>   
+
                     </div>
 
                     </label>
 
                     <label>valor
-                        <input class="entrada" type="text" pattern="[0-9]*\.?[0-9]*" placeholder="digite um valor">
+                        <input class="entrada" type="number"   placeholder="digite um valor">
                     </label>
 
                     <button class="button_convert_money"> CONVERTER </button>
 
-
-
+                      
 
                 </section>
 
@@ -74,7 +75,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="js/caselamento-de-caracteres.js"></script>
+    
 </body>
 
 </html>
