inseriondo uma imagem no inicio da pagina

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+    <img src="assets/logo.gif   " alt="">
     <main class="content-prinpal">
         <div class="content_grip">
             <div class="caixa-principal">
