terminando algumas alteraçoes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     </label>
 
                     <label>valor
-                        <input class="entrada" type="number"   placeholder="digite um valor">
+                        <input class="entrada" type="text"   placeholder="digite um valor">
+                        <p class="texto-alerta"></p>
                     </label>
 
                     <button class="button_convert_money"> CONVERTER </button>
