--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
         </label>
 
         <label>valor
-            <input type="number" placeholder="digite um valor">
+            <input class="input_values" type="number" placeholder="digite um valor">
         </label>
 
-        <button> CONVERTER </button>
+        <button class="convert_button"> CONVERTER </button>
 
         <section>
             <div class="currency_box">
-                <img src="./assets/brasil.png" alt=" real brasileiro">
+                <img class="img_convert" src="./assets/brasil.png" alt=" real brasileiro">
                 <p class="currency">REAL</p>
-                <p class="currency_value">R$ 0,00 </p>
+                <p class="currency_value_to_convert">R$ 0,00 </p>
             </div> 
 
             <img class="arrow" src="./assets/arrow.png" alt="">
 
             <div class="currency_box">
-                <img src="./assets/estados-unidos (1) 1.png" alt=" real brasileiro">
+                <img class="img_convert" src="./assets/estados-unidos (1) 1.png" alt=" real brasileiro">
                 <p class="currency">US$ DOLAR AMERICANO</p>
-                <p class="currency_value"> R$ 0,00 </p>
+                <p class="currency_value"> US$ 0,00 </p>
             </div>
 
         </section>
@@ -56,6 +56,9 @@
 
     </main>
 
+
+
+    <script src="./scripts.js"></script>
 
 
 </body>
