finalizei a minha aplicação

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 
         <label> converter <b> para </b>
-            <select>
-                <option value=""> US$ DOLAR AMERICANO</option>
-                <option value=""> BTC BITCOIN</option>
-                <option value=""> € EURO </option>
-                <option value=""> £ LIBRA </option>
+            <select class="box_select_two">
+                <option value="DOLAR"> US$ DOLAR AMERICANO</option>
+                <option value="BITCOIN"> BTC BITCOIN</option>
+                <option value="EURO"> € EURO </option>
+                <option value="LIBRA"> £ LIBRA </option>
             </select>
 
         </label>
@@ -46,8 +46,8 @@
             <img class="arrow" src="./assets/arrow.png" alt="">
 
             <div class="currency_box">
-                <img class="img_convert" src="./assets/estados-unidos (1) 1.png" alt=" real brasileiro">
-                <p class="currency">US$ DOLAR AMERICANO</p>
+                <img class="img_converted" src="./assets/estados-unidos (1) 1.png" alt=" real brasileiro">
+                <p class="currency" id="name_currency">US$ DOLAR AMERICANO</p>
                 <p class="currency_value"> US$ 0,00 </p>
             </div>
 
