--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
 
         <label> converter <b> de </b>
             <select class="box_select_one">
-                <option> R$ Real Brasileiro </option>
+                <option value="real"> R$ Real Brasileiro </option>
+                <option value="dolar">US$  DÓLAR AMERICANO</option>
+                <option value="euro" >€ EURO</option>
+                <option value="libra">£ LIBRA</option>
+                <option value="bitcoin">µBTC BITCOIN</option>
+
             </select>
         </label>
 
 
         <label> converter <b> para </b>
             <select class="box_select_two">
-                <option value="DOLAR"> US$ DOLAR AMERICANO</option>
-                <option value="BITCOIN"> BTC BITCOIN</option>
-                <option value="EURO"> € EURO </option>
-                <option value="LIBRA"> £ LIBRA </option>
+                <option value="dolar"> US$ DOLAR AMERICANO</option>
+                <option value="bitcoin"> µBTC BITCOIN</option>
+                <option value="euro"> € EURO </option>
+                <option value="libra"> £ LIBRA </option>
+                <option value="real">R$ REAL BRASILIERO </option>
             </select>
 
         </label>
@@ -41,12 +47,12 @@
                 <img class="img_convert" src="./assets/brasil.png" alt=" real brasileiro">
                 <p class="currency">REAL</p>
                 <p class="currency_value_to_convert">R$ 0,00 </p>
-            </div> 
+            </div>
 
             <img class="arrow" src="./assets/arrow.png" alt="">
 
             <div class="currency_box">
-                <img class="img_converted" src="./assets/estados-unidos (1) 1.png" alt=" real brasileiro">
+                <img class="img_converted" src="./assets/estados-unidos.png" alt=" real brasileiro">
                 <p class="currency" id="name_currency">US$ DOLAR AMERICANO</p>
                 <p class="currency_value"> US$ 0,00 </p>
             </div>
