--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img class="arrow" src="./assets/arrow.png" alt="">
 
             <div class="currency_box">
-                <img class="img_converted" src="./assets/estados-unidos.png" alt=" real brasileiro">
+                <img class="img_converted" src="./assets/estados-unidos.png" alt=" dolar americano ">
                 <p class="currency" id="name_currency">US$ DOLAR AMERICANO</p>
                 <p class="currency_value"> US$ 0,00 </p>
             </div>
