--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         <label> converter <b> de </b>
             <select class="box_select_one">
-                <option value="real"> R$ Real Brasileiro </option>
-                <option value="dolar">US$  DÓLAR AMERICANO</option>
-                <option value="euro" >€ EURO</option>
-                <option value="libra">£ LIBRA</option>
-                <option value="bitcoin">µBTC BITCOIN</option>
+                <option value="real">Real Brasileiro </option>
+                <option value="dolar">DÓLAR AMERICANO</option>
+                <option value="euro" >EURO</option>
+                <option value="libra">LIBRA</option>
+                <option value="bitcoin">BTC BITCOIN</option>
 
             </select>
         </label>
@@ -27,11 +27,11 @@
 
         <label> converter <b> para </b>
             <select class="box_select_two">
-                <option value="dolar"> US$ DOLAR AMERICANO</option>
-                <option value="bitcoin"> µBTC BITCOIN</option>
-                <option value="euro"> € EURO </option>
-                <option value="libra"> £ LIBRA </option>
-                <option value="real">R$ REAL BRASILIERO </option>
+                <option value="dolar">DOLAR AMERICANO</option>
+                <option value="bitcoin">BITCOIN</option>
+                <option value="euro">EURO </option>
+                <option value="libra">LIBRA </option>
+                <option value="real">REAL BRASILIERO </option>
             </select>
 
         </label>
