atualização rapido do javascript

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </label>
 
         <label>valor
-            <input class="input_values" type="number" placeholder="digite um valor">
+            <input class="input_values" type="text" placeholder="digite um valor">
         </label>
 
         <button class="convert_button"> CONVERTER </button>
