correçãode codigo quebrado javascript

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             </select>
         </label>
 
-
         <label> converter <b> para </b>
             <select class="box_select_two">
                 <option value="dolar">DOLAR AMERICANO</option>
@@ -46,7 +45,7 @@
             <div class="currency_box">
                 <img class="img_convert" src="./assets/brasil.png" alt=" real brasileiro">
                 <p class="currency">REAL</p>
-                <p class="currency_value_to_convert">R$ 0,00 </p>
+                <p class="currency_value_to_convert value1" >R$ 0,00 </p>
             </div>
 
             <img class="arrow" src="./assets/arrow.png" alt="">
@@ -54,7 +53,7 @@
             <div class="currency_box">
                 <img class="img_converted" src="./assets/estados-unidos.png" alt=" dolar americano ">
                 <p class="currency" id="name_currency">US$ DOLAR AMERICANO</p>
-                <p class="currency_value"> US$ 0,00 </p>
+                <p class="currency_value value2"> US$ 0,00 </p>
             </div>
 
         </section>
